syntax/tests/parsing/errors/signature/consecutive.resi
let x: int let y: float

export z1: int export z2: float
